<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.ao.co.tobe.appbuap.controllers.MainViewModel" />
        <variable
            name="viewModel"
            type="MainViewModel" />
    </data>

<ScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/input_text">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimens_100dp"
                android:layout_height="@dimen/dimens_100dp"
                android:src="@drawable/background_radius" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                style="bold"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_12sp"
                android:text="Pagamento por Referência"
                android:textSize="@dimen/text_24sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimens_10dp"
            android:background="@drawable/input_layout"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/texview_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                style="bold"
                android:text="Dados do Pagamento"
                android:textSize="@dimen/text_18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ordem_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:hint="@string/ordem_pagamento">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:background="@drawable/input_text" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_10dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/rupe_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/rupe">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:background="@drawable/input_text" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/valor_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/valor">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_text" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/pay_btn"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="@dimen/dimens_10dp"
                app:icon="@drawable/ic_baseline_qr_code_scanner"
                android:background="@drawable/button_selector"
                android:elevation="6dp"
                android:text="QrCoce"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linear_value_pay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_margin="@dimen/dimens_10dp"
            android:background="@drawable/input_layout"
            android:elevation="5dp"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                style="bold"
                android:text="Como vai pagar?"
                android:textSize="@dimen/text_18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/type"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Forma pagamento">
                    <AutoCompleteTextView
                        android:id="@+id/type_pay"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dimens_50dp"
                        android:background="@drawable/input_text"
                        android:text="@={viewModel.payTypeView}"
                        android:inputType="none"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_pay_cash"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/valo_pago_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/valor_pago">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:background="@drawable/input_text" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/troco_pay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Troco">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:editable="false"
                            android:background="@drawable/input_text" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/take_foto"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ticket_multicaixa"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:background="@color/input_text"
                    app:srcCompat="@drawable/ic_baseline_photo_camera"
                    android:layout_width="@dimen/dimens_150dp"
                    android:layout_height="@dimen/dimens_150dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/submeter_pay_btn"
                android:layout_width="180dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/dimens_10dp"
                android:background="@drawable/button_selector"
                android:elevation="6dp"
                android:text="@string/save_card"
                android:textColor="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>

</ScrollView>
</layout>